changed pic sizes

--- a/Pizzas/templates/pizzas/index.html
+++ b/Pizzas/templates/pizzas/index.html
@@ -9,7 +9,7 @@
 
 
 
-<p> Findlay Family Pizzeria </p>
+<p style="font-size:40px">Findlay Family Pizzeria </p>
 
 <p> "Best Pizzas this side of the Mississippi!" </p>
 <p> Call to Place an Order: 903-705-5343 </p>
